--- a/css/styles.css
+++ b/css/styles.css
@@ -1,74 +1,48 @@
-/* ====== Base Reset ====== */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #ffffff;
-    margin: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
 }
 
 ul,
 ol {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
 
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
     margin: 0;
 }
 
 a {
     text-decoration: none;
-    color: inherit;
 }
 
-button {
-    font-family: inherit;
-    cursor: pointer;
+img {
+    display: block;
 }
 
-/* ====== Utility Classes ====== */
 .container {
-    width: 1158px;
-    margin: 0 auto;
+    max-width: 1158px;
     padding: 0 15px;
+    margin: 0 auto;
 }
 
-.section {
-    padding: 120px 0;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-}
-
-/* ====== Header ====== */
+/* page header start */
 .page-header {
     border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
+.header-conteiner {
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .header-nav {
@@ -77,76 +51,118 @@ button {
 }
 
 .logo {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    line-height: 1.17;
+}
+
+.header-logo {
+    padding: 24px 0;
     margin-right: 76px;
 }
 
-.logo-part {
+.header-logo .logo-part {
     color: #2e2f42;
 }
 
 .nav-list {
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 
 .nav-link {
     padding: 24px 0;
-    color: #2e2f42;
+    display: block;
     font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+    color: #404BBF;
 }
 
 .contacts {
     font-style: normal;
+    margin-left: auto;
 }
 
 .contacts-list {
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 
 .contacts-address {
+    display: block;
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
-    font-weight: 400;
 }
 
-/* ====== Hero ====== */
+.contacts-address:hover,
+.contacts-address:focus {
+    color: #404BBF;
+}
+
+/* page header stop*/
+
+/* banner start */
 .hero-banner {
     background-color: #2e2f42;
-    padding: 188px 0;
     text-align: center;
+    padding: 188px 0;
 }
 
 .hero-banner-title {
-    max-width: 496px;
-    margin: 0 auto 48px;
     font-size: 56px;
-    font-weight: 700;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
     color: #ffffff;
+    margin: 0 auto;
+    max-width: 496px;
 }
 
 .hero-banner-button {
-    display: block;
-    margin: 0 auto;
-    min-width: 169px;
-    height: 56px;
-    padding: 16px 32px;
-    border: none;
-    border-radius: 4px;
-    background-color: #4d5ae5;
-    color: #ffffff;
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    height: 56px;
+    margin: 48px auto 0;
+    border: none;
+    border-radius: 4px;
+    display: block;
+    min-width: 169px;
 }
 
-/* ====== Features Section ====== */
+.hero-banner-button:hover,
+.hero-banner-button:focus {
+    background-color: #404BBF
+}
+
+/* baner stop */
+
+/* description start */
+.description {
+    padding: 120px 0
+}
+
 .description-list {
     display: flex;
     gap: 24px;
@@ -156,120 +172,174 @@ button {
     width: calc((100% - 72px) / 4);
 }
 
+
 .description-list-subtitle {
-    margin-bottom: 8px;
-    font-size: 20px;
     font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .description-list-text {
     font-size: 16px;
-    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
 
-/* ====== Team Section ====== */
+/* description stop */
+
+/* team start */
 .team {
-    background-color: #f4f4fd;
     padding: 120px 0;
-}
-
-.team-title {
-    text-align: center;
-    margin-bottom: 72px;
-    font-size: 36px;
-    font-weight: 700;
-    color: #2e2f42;
+    background-color: #F4F4FD
 }
 
 .team-item {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 24px;
 }
 
-.team-item-list {
-    background-color: #ffffff;
-    border-radius: 0 0 4px 4px;
-    width: calc((100% - 72px) / 4);
+.team-title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
 }
 
-.team-card-content {
-    padding: 32px 0;
+.team-item-list {
+    background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    width: 264px;
+    overflow: hidden;
     text-align: center;
+}
+
+.team-item-list-block {
+    padding: 32px 0;
 }
 
 .team-item-list-subtitle {
-    margin-bottom: 8px;
-    font-size: 20px;
     font-weight: 500;
-    text-align: center;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 .team-item-list-text {
-    text-align: center;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
+    text-align: center;
 }
 
-/* ====== Portfolio Section ====== */
+/* team stop */
+
+/* portfolio start*/
+.portfolio {
+    padding: 120px 0 120px 0
+}
+
 .portfolio-title {
-    text-align: center;
-    margin-bottom: 72px;
-    font-size: 36px;
-    font-weight: 700;
     color: #2e2f42;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .portfolio-item {
+    padding-top: 72px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 48px 24px;
     flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+
 }
 
 .portfolio-item-list {
     width: calc((100% - 48px) / 3);
+
 }
 
-.portfolio-card-content {
+.portfolio-item-text-block {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
 
 .portfolio-item-list-subtitle {
-    margin-bottom: 8px;
-    font-size: 20px;
     font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
+    margin: 0;
+    margin-bottom: 8px;
 }
 
 .portfolio-item-list-text {
     font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
+    margin: 0;
 }
 
-/* ====== Footer ====== */
+/* portfolio stop */
+
+/* footer start */
 .page-footer {
-    background-color: #2e2f42;
     padding: 100px 0;
+    background-color: #2e2f42;
 }
 
 .footer-logo {
+    color: #4d5ae5;
+    line-height: 1.17;
     display: inline-block;
     margin-bottom: 16px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
+}
+
+.footer-logo .logo-part {
+    color: #f4f4fd;
 }
 
 .footer-text {
-    max-width: 264px;
-    color: #f4f4fd;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
-    font-weight: 400;
     line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 264px;
+}
+
+/* footer stop */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
 }
